--- a/PanelAdm/nowyPanelAdm/style.css
+++ b/PanelAdm/nowyPanelAdm/style.css
@@ -12,7 +12,7 @@ body, html {
 .container {
   margin: 0.2rem 0 0 0;
   display: grid;
-  grid-template: 8% 1.5% 50% 1.5% 50% / 1fr;
+  grid-template: 8% 1.5% 50% 1.5% 50% 1.5% 50% 1.5% 50% 1.5% 50% 1.5% / 1fr;
   grid-gap: 1%;
   min-height: 100%;
   width: 50vw;
@@ -53,6 +53,8 @@ body, html {
   background: white;
   border-radius: 0.4rem;
   border: 2px solid #b8b8b8;
+  padding: 3%;
+  color: gray;
 }
 
 .main__article_item2 {
@@ -74,6 +76,66 @@ body, html {
   width: 100%;
 }
 
+.main__article_item2_container_select {
+  width: 92%;
+  border-radius: 0.1rem;
+  border: 2px solid #b8b8b8;
+  padding: 0.5% 0;
+  color: gray;
+  font-size: 1rem;
+  padding: 1% 0 1% 0.5%;
+  margin: 0 0 0.5% 0;
+}
+
+.main__article_item2_container2 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.main__article_item2_container2_file {
+  padding: 1% 0 0 0;
+  width: 42%;
+}
+
+.main__article_item2_container2_input {
+  width: 40%;
+  border-radius: 0.1rem;
+  border: 2px solid #b8b8b8;
+  padding: 0.5% 0;
+  color: gray;
+  font-size: 1rem;
+  padding: 1% 0 1% 0.5%;
+}
+
+.main__article_item2_container2_input::placeholder {
+  color: rgba(184, 184, 184, 0.705);
+}
+
+.main__article_item2_container2_input2 {
+  background: white;
+  width: 46%;
+  border-radius: 0.1rem;
+  border: 2px solid #b8b8b8;
+  color: gray;
+  font-size: 1rem;
+  padding: 1% 0 1% 0.5%;
+}
+
+.main__article_item2_container2_input2::placeholder {
+  color: rgba(184, 184, 184, 0.705);
+}
+
+.main__article_item2_container2_input2:checked {
+  background: blue;
+}
+
+.main__article_item2_container3 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .main__article_item2_input {
   width: 91%;
   border-radius: 0.1rem;
@@ -82,6 +144,7 @@ body, html {
   color: gray;
   font-size: 1rem;
   padding: 1% 0 1% 0.5%;
+  margin: 0 0 0.5% 0;
 }
 
 .main__article_item2_input::placeholder {
@@ -107,7 +170,7 @@ textarea {
   padding: 0.5% 0.5%;
   color: gray;
   width: 90%;
-  height: 70%;
+  height: 50%;
   border-radius: 0.1rem;
   border: 2px solid #b8b8b8;
   resize: none;
