--- a/Maszyny/style.css
+++ b/Maszyny/style.css
@@ -158,8 +158,8 @@ footer.container .container__item2 {
 
 body, html {
   background: #f3f3f3;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
   color: white;
   font-family: Lato, "sans-serif";
   display: flex;
@@ -177,40 +177,39 @@ main.container-main {
 }
 
 .main__container {
-  height: 100vh;
+  color: #171717;
+  min-height: 90vh;
   width: 60%;
   padding: 1% 1% 2% 4%;
-  display: grid;
-  grid-template-columns: 0.2fr 1.5fr;
+  display: flex;
   justify-content: space-between;
-  background: rgba(161, 159, 159, 0.705);
 }
 
 .main__article {
   display: grid;
   grid-template-rows: repeat(9, 0.1fr);
-  width: 100%;
-  height: 100%;
+  width: 60%;
+  height: auto;
 }
 
 .main__article_item {
   display: flex;
   align-items: center;
-  padding: 0.5% 2% 1.5% 0.5%;
-  border: 0.15rem solid black;
-}
-
-.main__article_item:not(:last-child) {
-  border-bottom: none;
+  padding: 5% 1%;
+  background: white;
+  border-bottom: 0.15rem solid #f3f3f3;
 }
 
 .main__article_item_container {
   display: flex;
   flex-direction: column;
+  padding: 0 0 0 2%;
 }
 
 .main__article_item_header {
   font-size: 1.5rem;
+  padding: 0 0 3% 0;
+  color: #1c6088;
 }
 
 .main__article_item_text {
@@ -219,6 +218,48 @@ main.container-main {
 
 .main__article_item_image {
   margin: 0 2% 0 0;
+}
+
+.main__timeline {
+  display: flex;
+  flex-direction: column;
+}
+
+.main__timeline_input {
+  font-size: 1.1rem;
+  color: #171717;
+  font-weight: normal;
+  text-transform: none;
+  padding: 8% 10%;
+  border: none;
+  text-align: left;
+}
+
+.main__timeline_input:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.main__timeline2 {
+  height: fit-content;
+  width: 22.5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main__timeline2_input {
+  margin: 15% 0 0 0;
+  padding: 5% 2%;
+  background: white;
+  border: 0.15rem solid rgba(170, 170, 170, 0.685);
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #6f6f6f;
+}
+
+.main__timeline2_input:hover {
+  cursor: pointer;
 }
 
 .wrapper {
