--- a/Maszyny/style.scss
+++ b/Maszyny/style.scss
@@ -1,9 +1,9 @@
 @import "../__variables.scss";
 
 body, html {
-    background: rgb(243, 243, 243);
-    height: 100vh;
-    width: 100vw;
+    background: $background;
+    min-height: 100vh;
+    max-width: 100vw;
 
     color: white;
     font-family: $Font;
@@ -23,44 +23,88 @@ main.container-main {
 }
 
 .main__container {
-    height: 100vh;
+    color: #171717;
+    min-height: 90vh;
     width: 60%;
     padding: 1% 1% 2% 4%;
 
-    display: grid;
-    grid-template-columns: 0.2fr 1.5fr;
+    display: flex;
     justify-content: space-between;
-    background: rgba(161, 159, 159, 0.705);
 }
 
 .main__article {
     display: grid;
     grid-template-rows: repeat(9, 0.1fr);
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: auto;
 
     
     &_item {
         display: flex;
         align-items: center;
-        padding: 0.5% 2% 1.5% 0.5%;
-        border: 0.15rem solid black;
+        padding: 5% 1%;
+        background: white;
+        border-bottom: 0.15rem solid $background;
 
-        &:not(:last-child) {
-            border-bottom: none;
-        }
         &_container {
             display: flex;
             flex-direction: column;
+            padding: 0 0 0 2%;
         }
         &_header {
             font-size: 1.5rem;
+            padding: 0 0 3% 0;
+            color: rgb(28, 96, 136);
         }
         &_text {
             font-size: 1rem;
         }
         &_image{
             margin: 0 2% 0 0;
+        }
+    }
+}
+
+.main__timeline {
+    display: flex;
+    flex-direction: column;
+
+    &_input {
+        font-size: 1.1rem;
+        color: #171717;
+        font-weight: normal;
+        text-transform: none;
+        padding: 8% 10%;
+        border: none;
+        text-align: left;
+
+        &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+        }
+    }
+}
+
+.main__timeline2 {
+    height: fit-content;
+    width: 22.5%;
+    display: flex;
+    flex-direction: column;
+
+    &_input {
+        margin: 15% 0 0 0;
+        padding: 5% 2%;
+
+        background: white;
+        border: 0.15rem solid rgba(170, 170, 170, 0.685);
+
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: $Gray;
+
+        &:hover {
+            cursor: pointer;
         }
     }
 }
