Masne produkty itd.

--- a/Maszyny/style.scss
+++ b/Maszyny/style.scss
@@ -24,8 +24,8 @@ main.container-main {
 
 .main__container {
     color: #171717;
-    min-height: 90vh;
-    width: 60%;
+    height: 1100px;
+    width: 1142px;
     padding: 1% 1% 2% 4%;
 
     display: flex;
