--- a/Produkty/style.scss
+++ b/Produkty/style.scss
@@ -1,7 +1,7 @@
 @import "../__variables.scss";
 
 body, html {
-    background: rgb(243, 243, 243);
+    background: $background;
     min-height: 100vh;
     max-width: 100vw;
 
@@ -10,7 +10,7 @@ body, html {
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 main.container-main {
@@ -19,73 +19,110 @@ main.container-main {
     align-items: center;
     justify-content: center;
 
-    width: 100%;
+    width: 100vw;
 }
 
 .main__container {
-    width: 60%;
-    height: 110vh;
-    display: grid;
-    grid-template: 22.5% 75% / 0.2fr 1fr;
-    grid-gap: 2%;
-    // padding: 1%;
-    background: $lightGray;
-}
+    color: #171717;
+    height: 1100px;
+    width: 1142px;
+    padding: 1% 1% 2% 4%;
 
-.main__image {
-    // background: url("../images/Banne_v3r.jpg");
-    width: 100%;
-    max-height: 25vh;
-    object-fit: cover;
-    object-position: top;
-    grid-column: 1/3;
+    display: flex;
+    justify-content: space-between;
 }
 
 .main__article {
     display: grid;
-    grid-template: 0.1fr 1fr / 1fr;
-    grid-row-gap: 2%;
+    grid-template-rows: repeat(9, 0.1fr);
+    width: 60%;
+    height: auto;
 
-    background: rgb(175, 69, 69);
-    border: 0.2rem solid black;
-    padding: 3% 5% 3% 5%;
-    margin: 0 2% 2% 0;
+    
+    &_item {
+        display: flex;
+        align-items: center;
+        padding: 5% 1%;
+        background: white;
+        border-bottom: 0.15rem solid $background;
 
-    &_header {
-        // background: coral;
-        font-size: 3rem;
-    }
-    &_text {
-        font-size: 1.5rem;
-        // background: lightblue;
+        &_container {
+            display: flex;
+            flex-direction: column;
+            padding: 0 0 0 2%;
+        }
+        &_header {
+            font-size: 1.5rem;
+            padding: 0 0 3% 0;
+            color: rgb(28, 96, 136);
+        }
+        &_text {
+            font-size: 1rem;
+        }
+        &_image{
+            margin: 0 2% 0 0;
+        }
     }
 }
 
 .main__timeline {
-    margin: 0 0 10% 10%;
-    border: 0.2rem solid black;
-    background: rgb(55, 55, 180);
-
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 5% 0 0 0;
+
+    &_input {
+        font-size: 1.1rem;
+        color: #171717;
+        font-weight: normal;
+        text-transform: none;
+        padding: 8% 10%;
+        border: none;
+        text-align: left;
+
+        &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+        }
+    }
 }
 
+.main__timeline2 {
+    height: fit-content;
+    width: 22.5%;
+    display: flex;
+    flex-direction: column;
+
+    &_input {
+        margin: 15% 0 0 0;
+        padding: 5% 2%;
+
+        background: white;
+        border: 0.15rem solid rgba(170, 170, 170, 0.685);
+
+        font-size: 1.1rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: $Gray;
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
 .wrapper {
     order: 2;
     width: auto;
 }
 
 .mobile-wrapper {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 0;
-    height: 0;
-    visibility: hidden;
+        position: absolute;
+        top: 50%;
+        left: 5%;
+        width: 0;
+        height: 0;
+        visibility: hidden;
 }
+
+
 
 @media only screen and (max-width:1328px) {
 
@@ -102,7 +139,7 @@ main.container-main {
         font-size: 0.8em;
         width: 100%;
         
-        margin: 0% 0% 3% 0%;
+        margin: 2% 0% 8% 0%;
     }
     .wrapper {
         visibility: hidden;
