--- a/Produkty/style.css
+++ b/Produkty/style.css
@@ -164,7 +164,7 @@ body, html {
   font-family: Lato, "sans-serif";
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -173,53 +173,93 @@ main.container-main {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 100vw;
 }
 
 .main__container {
-  width: 60%;
-  height: 110vh;
-  display: grid;
-  grid-template: 22.5% 75% / 0.2fr 1fr;
-  grid-gap: 2%;
-  background: #d7d7d7;
-}
-
-.main__image {
-  width: 100%;
-  max-height: 25vh;
-  object-fit: cover;
-  object-position: top;
-  grid-column: 1/3;
+  color: #171717;
+  height: 1100px;
+  width: 1142px;
+  padding: 1% 1% 2% 4%;
+  display: flex;
+  justify-content: space-between;
 }
 
 .main__article {
   display: grid;
-  grid-template: 0.1fr 1fr / 1fr;
-  grid-row-gap: 2%;
-  background: #af4545;
-  border: 0.2rem solid black;
-  padding: 3% 5% 3% 5%;
-  margin: 0 2% 2% 0;
+  grid-template-rows: repeat(9, 0.1fr);
+  width: 60%;
+  height: auto;
 }
 
-.main__article_header {
-  font-size: 3rem;
+.main__article_item {
+  display: flex;
+  align-items: center;
+  padding: 5% 1%;
+  background: white;
+  border-bottom: 0.15rem solid #f3f3f3;
 }
 
-.main__article_text {
+.main__article_item_container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 2%;
+}
+
+.main__article_item_header {
   font-size: 1.5rem;
+  padding: 0 0 3% 0;
+  color: #1c6088;
+}
+
+.main__article_item_text {
+  font-size: 1rem;
+}
+
+.main__article_item_image {
+  margin: 0 2% 0 0;
 }
 
 .main__timeline {
-  margin: 0 0 10% 10%;
-  border: 0.2rem solid black;
-  background: #3737b4;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 5% 0 0 0;
+}
+
+.main__timeline_input {
+  font-size: 1.1rem;
+  color: #171717;
+  font-weight: normal;
+  text-transform: none;
+  padding: 8% 10%;
+  border: none;
+  text-align: left;
+}
+
+.main__timeline_input:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.main__timeline2 {
+  height: fit-content;
+  width: 22.5%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main__timeline2_input {
+  margin: 15% 0 0 0;
+  padding: 5% 2%;
+  background: white;
+  border: 0.15rem solid rgba(170, 170, 170, 0.685);
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #6f6f6f;
+}
+
+.main__timeline2_input:hover {
+  cursor: pointer;
 }
 
 .wrapper {
@@ -229,8 +269,8 @@ main.container-main {
 
 .mobile-wrapper {
   position: absolute;
-  top: 0%;
-  left: 0%;
+  top: 50%;
+  left: 5%;
   width: 0;
   height: 0;
   visibility: hidden;
@@ -248,7 +288,7 @@ main.container-main {
     font-weight: bold;
     font-size: 0.8em;
     width: 100%;
-    margin: 0% 0% 3% 0%;
+    margin: 2% 0% 8% 0%;
   }
   .wrapper {
     visibility: hidden;
