--- a/__variables.scss
+++ b/__variables.scss
@@ -130,7 +130,7 @@ footer.container {
     align-items: end;
 
     height: auto;
-    width: 60%;
+    width: 1141px;
 
     .container__item1 {
         display: flex;
