--- a/Serwis/style.css
+++ b/Serwis/style.css
@@ -110,7 +110,7 @@ footer.container {
   grid-template: 7fr 0.3fr / 1fr;
   align-items: end;
   height: auto;
-  width: 60%;
+  width: 1141px;
 }
 
 footer.container .container__item1 {
