--- a/PanelAdm/nowyPanelAdm/style.scss
+++ b/PanelAdm/nowyPanelAdm/style.scss
@@ -52,6 +52,7 @@ body, html {
     padding: 1%;
 
     &_item1 {
+        font-size: 0.8rem;
         background: white;
         border-radius: 0.4rem;
         border: 2px solid rgba(184, 184, 184, 1);
