--- a/Kontakt/style.css
+++ b/Kontakt/style.css
@@ -110,7 +110,7 @@ footer.container {
   grid-template: 7fr 0.3fr / 1fr;
   align-items: end;
   height: auto;
-  width: 1141px;
+  width: 1152px;
 }
 
 footer.container .container__item1 {
@@ -177,9 +177,9 @@ main.container-main {
 }
 
 .main__article {
-  width: 60%;
-  height: 120vh;
-  padding: 0 0 1.5% 0;
+  width: 1152px;
+  height: auto;
+  padding: 0 0 7rem 0;
   display: grid;
   grid-template: 0.7fr 1.3fr/repeat(2, 1fr);
   grid-gap: 5% 0;
@@ -197,7 +197,7 @@ main.container-main {
 .main__article_item1 {
   width: 80%;
   height: 100%;
-  padding: 0.5% 7%;
+  padding: 3% 7%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -249,7 +249,7 @@ main.container-main {
 .main__article_form {
   width: 80%;
   height: 1.5fr;
-  padding: 5% 4% 0 4%;
+  padding: 5% 4% 1.5vw 4%;
   display: flex;
   flex-direction: column;
   background: rgba(194, 194, 194, 0.342);
@@ -302,7 +302,7 @@ main.container-main {
   border-radius: 2px;
   padding: 2% 2% 2% 2%;
   width: 100%;
-  height: 16vh;
+  height: 10rem;
   resize: none;
 }
 
