--- a/O firmie/style.css
+++ b/O firmie/style.css
@@ -110,7 +110,7 @@ footer.container {
   grid-template: 7fr 0.3fr / 1fr;
   align-items: end;
   height: auto;
-  width: 1141px;
+  width: 1152px;
 }
 
 footer.container .container__item1 {
@@ -178,8 +178,8 @@ main.container-main {
 }
 
 .main__article {
-  width: 1141px;
-  min-height: 2280px;
+  width: 1152px;
+  height: auto;
   background: #d7d7d7;
   color: #7d7d7d;
   display: flex;
@@ -192,7 +192,7 @@ main.container-main {
   grid-gap: 6% 4%;
   place-items: center;
   place-content: center;
-  margin: 8% 0 0 0;
+  margin: 8% 0 4% 0;
   padding: 0 0 0 0.5%;
   width: 80%;
   height: auto;
@@ -270,7 +270,7 @@ main.container-main {
   color: #6b6b6b;
   padding: 1.5% 0 1.5% 1.5%;
   font-size: 1.2rem;
-  background: silver;
+  background: #d7d7d7;
   width: 100%;
   height: 100%;
 }
