--- a/O firmie/style.scss
+++ b/O firmie/style.scss
@@ -24,8 +24,8 @@ main.container-main {
 }
 
 .main__article {
-    width: 1141px;
-    min-height: 2280px;
+    width: 1152px;
+    height: auto;
     background: $lightGray;
     color: $Gray2;
     display: flex;
@@ -38,7 +38,7 @@ main.container-main {
         place-items: center;
         place-content: center;
 
-        margin: 8% 0 0 0;
+        margin: 8% 0 4% 0;
         padding: 0 0 0 0.5%;
         width: 80%;
         height: auto;
@@ -111,7 +111,7 @@ main.container-main {
                     color:rgb(107, 107, 107);
                     padding: 1.5% 0 1.5% 1.5%;
                     font-size: 1.2rem;
-                    background: rgb(192, 192, 192);
+                    background: $lightGray;
                     width: 100%;
                     height: 100%;
 
