--- a/Serwis/style.css
+++ b/Serwis/style.css
@@ -110,7 +110,7 @@ footer.container {
   grid-template: 7fr 0.3fr / 1fr;
   align-items: end;
   height: auto;
-  width: 1141px;
+  width: 1152px;
 }
 
 footer.container .container__item1 {
@@ -179,7 +179,7 @@ main.container-main {
 
 .main__article {
   height: 120vh;
-  width: 60%;
+  width: 1152px;
   background: #d7d7d7;
   display: grid;
   grid-template: 21.5% 1fr / 1.5fr 1fr;
@@ -195,21 +195,60 @@ main.container-main {
 }
 
 .main__article_item2 {
-  background-color: #39c467;
+  background: white;
+  padding: 1rem;
+}
+
+.main__article_item2_header, .main__article_item2_text {
+  color: black;
+}
+
+.main__article_item2_header {
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 0 0 2% 0;
+}
+
+.main__article_item2_text {
+  font-size: 1.1rem;
 }
 
 .main__article_item3 {
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  background-color: #3563b9;
+  flex-direction: column;
+  padding: 2%;
+  background: white;
+  color: black;
+}
+
+.main__article_item3_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 0 30% 0;
+}
+
+.main__article_item3_header, .main__article_item3_text {
+  color: black;
+}
+
+.main__article_item3_header {
+  font-size: 1.8rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 0 0 2% 0;
+}
+
+.main__article_item3_text {
+  font-size: 1.1rem;
 }
 
 .main__article_item3_input {
   background: white;
   text-transform: none;
   width: 100%;
-  height: 4%;
+  height: 2rem;
   border: 3px solid #3563b9;
 }
 
