--- a/Serwis/style.scss
+++ b/Serwis/style.scss
@@ -24,7 +24,7 @@ main.container-main {
 }
 .main__article {
     height: 120vh;
-    width: 60%;
+    width: 1152px;
 
     background: $lightGray;
     display: grid;
@@ -44,22 +44,59 @@ main.container-main {
         grid-column: 1/3;
     }
     &_item2 {
-        background-color: rgb(57, 196, 103);
+        background: white;
+        padding: 1rem;
+
+        &_header, &_text {
+            color: black;
+        }
+
+        &_header {
+            font-size: 2rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+            padding: 0 0 2% 0;
+        }
+
+        &_text {
+            font-size: 1.1rem;
+        }
     }
     &_item3 {
         display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        // padding: 5% 0 0 0;
-        background-color: rgb(53, 99, 185);
+        flex-direction: column;
+        padding: 2%;
+        background: white;
+        color: black;
+
+        &_container {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0 0 30% 0;
+        }
+
+        &_header, &_text {
+            color: black;
+        }
+
+        &_header {
+            font-size: 1.8rem;
+            font-weight: 600;
+            letter-spacing: 1px;
+            padding: 0 0 2% 0;
+        }
+
+        &_text {
+            font-size: 1.1rem;
+        }
 
         &_input {
             background: white;
             text-transform: none;
             width: 100%;
-            height: 4%;
+            height: 2rem;
             border: 3px solid rgb(53, 99, 185);
-            
         }
     }
 }
