--- a/Serwis/style.css
+++ b/Serwis/style.css
@@ -245,11 +245,11 @@ main.container-main {
 }
 
 .main__article_item3_input {
+  padding: 0;
   background: white;
   text-transform: none;
   width: 100%;
   height: 2rem;
-  border: 3px solid #3563b9;
 }
 
 .wrapper {
