--- a/Serwis/style.scss
+++ b/Serwis/style.scss
@@ -92,11 +92,11 @@ main.container-main {
         }
 
         &_input {
+            padding: 0;
             background: white;
             text-transform: none;
             width: 100%;
             height: 2rem;
-            border: 3px solid rgb(53, 99, 185);
         }
     }
 }
