--- a/PanelAdm/nowyPanelAdm/style.scss
+++ b/PanelAdm/nowyPanelAdm/style.scss
@@ -166,6 +166,26 @@ body, html {
     }
 }
 
+.nest {
+    list-style: none;
+    user-select: none;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.nest::before {
+    content: "\25B6";
+    color: rgb(128, 128, 128);
+    margin-right: 6px;
+}
+
+.nestdown::before, .nestdown {
+    content: "\25B6";
+    color: rgb(128, 128, 128);
+    margin-right: 6px;
+}
+
 textarea {
     font-family: Lato;
     font-size: 1rem;
