--- a/Serwis/style.css
+++ b/Serwis/style.css
@@ -11,8 +11,8 @@ body, html {
 }
 
 nav {
-  height: 8vh;
-  width: 70%;
+  height: 86.39px;
+  width: 1334px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -158,14 +158,14 @@ footer.container .container__item2 {
 
 body, html {
   background: #f3f3f3;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
   overflow-x: hidden;
   color: white;
   font-family: Lato, "sans-serif";
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -178,18 +178,19 @@ main.container-main {
 }
 
 .main__article {
-  height: 120vh;
+  height: auto;
   width: 1152px;
   background: #d7d7d7;
   display: grid;
   grid-template: 21.5% 1fr / 1.5fr 1fr;
   grid-gap: 2%;
-  padding: 1% 1% 1% 1%;
+  padding: 1% 1% 3% 1%;
+  overflow: hidden;
 }
 
 .main__article_item1 {
   object-fit: cover;
-  height: 25vh;
+  height: 280px;
   width: 100%;
   grid-column: 1/3;
 }
@@ -264,105 +265,5 @@ main.container-main {
   width: 0;
   height: 0;
   visibility: hidden;
-}
-
-@media only screen and (max-width: 1328px) {
-  .mobile-wrapper {
-    visibility: visible;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    order: 8;
-    position: static;
-    font-weight: bold;
-    font-size: 0.8em;
-    width: 100%;
-    margin: 0% 0% 8% 0%;
-  }
-  .wrapper {
-    visibility: hidden;
-    width: 0;
-    height: 0;
-  }
-  main.container-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  nav {
-    height: 6vh;
-    width: 100%;
-    margin: 1% auto 0 0;
-  }
-  .item {
-    width: 70%;
-  }
-  __photo {
-    visibility: hidden;
-    width: 0;
-    height: 0;
-  }
-  footer.container {
-    width: 70%;
-  }
-  footer.container .container__item1 {
-    width: 100%;
-  }
-  footer.container .container__item1_logo {
-    margin: 2px 30px;
-  }
-  footer.container .container__item1_text {
-    width: 47.5%;
-    font-size: 0.75em;
-  }
-}
-
-@media only screen and (max-width: 764px) {
-  #icon1 {
-    margin-right: 5px;
-  }
-  #icon2 {
-    margin-right: -5px;
-  }
-  #icon4 {
-    margin-left: 2px;
-  }
-  nav {
-    font-size: 0.768em;
-  }
-  #nav_logo {
-    width: 120px;
-    height: 30px;
-  }
-  .mobile-wrapper {
-    margin-bottom: 3.5vh;
-  }
-  .mobile-wrapper .list {
-    font-size: 0.97em;
-  }
-  .item {
-    width: 85%;
-  }
-  footer.container {
-    width: 85%;
-  }
-  footer.container .container__item1_text {
-    font-size: 0.65em;
-  }
-  footer.container .container__item1_logo {
-    margin-left: 12.5%;
-    width: 100px;
-    height: 25px;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  #nav_logo {
-    width: 150px;
-    height: 20px;
-  }
 }
 /*# sourceMappingURL=style.css.map */
