--- a/Kontakt/style.scss
+++ b/Kontakt/style.scss
@@ -2,7 +2,7 @@
 
 body, html {
     background: $background;
-    height: 100vh;
+    min-height: 100vh;
     max-width: 100vw;
 
     color: white;
@@ -25,10 +25,10 @@ main.container-main {
 .main__article {
     width: 1152px; 
     height: auto;
-    padding: 0 0 7rem 0;
+    padding: 0 0 10rem 0;
 
     display: grid;
-    grid-template: 0.7fr 1.3fr / repeat(2, 1fr);
+    grid-template: 0.7fr 1fr / repeat(2, 1fr);
     grid-gap: 5% 0;
     background: white;
     color: $black;
@@ -177,7 +177,7 @@ main.container-main {
 
 .main__photo {
     width: 100%;
-    height: 25vh;
+    height: 270px;
     grid-column: 1/3;
     object-fit: cover;
 }
@@ -194,23 +194,38 @@ input[type=text] {
     display: flex;
     flex-direction: column;
     font-size: 3rem;
+    justify-self: flex-end;
 
     position: fixed;
-    right: 0.5%;
+    right: 20px;
     top: 50%;
-    // transform: translateY(-50%);
 }
 
 #ig {
     color: rgb(255, 100, 177);
+    transition: opacity 0.5s ease;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.6;
+    }
 }
 
 #fb {
     color: rgb(40, 40, 146);
     margin: 0.4rem 0 0.4rem 0;
+    transition: opacity 0.5s ease;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.7;
+    }
 }
 #wa {
     color: rgb(19, 163, 19);
+    transition: opacity 0.5s ease;
+    &:hover {
+        cursor: pointer;
+        opacity: 0.6;
+    }
 }
 
 input {
@@ -290,274 +305,4 @@ input {
     width: 0;
     height: 0;
     visibility: hidden;
-}
-
-@media only screen and (max-width:1400px) {
-
-    .mobile-wrapper {
-        visibility: visible;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        order: 8;
-        position: static;
-
-        font-weight: bold;
-        font-size: 0.88em;
-        
-        width: 100%;
-        margin: 2% 0% 8% 0%;
-    }
-    .wrapper {
-        visibility: hidden;
-        width: 0;
-        height: 0;
-    }
-
-    main.container-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-    .main__article {
-        width: 80%;
-    }
-    nav {
-        height: 6vh;
-        width: 100%;
-        margin: 1% 0 0 0;
-    }
-
-    .item {
-        width: 100%;        
-    }
-        
-        &__photo {
-            visibility: hidden;
-            width: 0;
-            height: 0;
-        }
-
-    footer.container {
-        width: 80%;
-
-        .container__item1 {
-            width: 100%;
-            &_logo {
-                margin: 2px 30px;
-            }
-            &_text {
-                width: 47.5%;
-                font-size: 0.75em;
-            }
-        }
-    }
-}
-    
-
-@media only screen and (max-width:1100px) {
-
-    #icon1 {
-        margin-right: 5px;
-    }
-    #icon2 {
-        margin-right: -5px;
-    }
-    #icon4 {
-        margin-left: 2px;
-    }
-    nav {
-        font-size: 0.768em;
-    }
-    #nav_logo {
-        width: 120px;
-        height: 30px;
-    }
-    .mobile-wrapper {
-        margin: 3% 0 8% 0;
-
-        .list {
-            font-size: 1.05em;
-        }
-    }
-    .item {
-        width: 80%;
-        
-    }
-    .main__article {
-        width: 70%; 
-        height: 160vh;
-        padding: 3% 0 7% 0;
-
-        display: grid;
-        grid-template: repeat(4, 1fr) / 1fr;
-        grid-gap: 1%;
-        background: rgba(194, 194, 194, 0.342);
-        color: $black;
-        justify-items: center;
-
-        &_map {
-            width: 80%;
-            height: 100%;
-            margin: 1% 0 0 0;
-        }
-
-        &_item1 {
-            width: 80%;
-            height: 100%;
-            padding: 0 7%;
-
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-
-            background: white;
-
-            &_header {
-                align-self: flex-start;
-                font-size: 1.2em;
-                font-weight: 900;
-            }
-            &_text {
-                font-size: 0.955em;
-            }
-        }
-        &_item3 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            
-            width: 80%;
-            height: 100%;
-            background: white;
-            margin: 2% 0 0 0;
-            padding: 2% 8% 2% 8%;
-            &_container {
-                display: flex;
-                flex-direction: column;
-            }
-            &_wrapper {
-                height: 100%;
-                width: 100%;
-
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: center;
-            }
-            &_header {
-                padding: 2% 0 6% 0;                
-            }
-        }
-        &_form {
-            width: 80%;
-            height: 100%;
-            padding: 5% 4% 0 4%;
-            margin: 2% 0 0 0;
-
-            display: flex;
-            flex-direction: column;
-
-            background: white;
-            color: $Gray;
-            font-size: 0.999em;
-
-            &_wrapper {
-                width: 100%;
-
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                
-                &_name {
-                    display: flex;
-                    flex-direction: column;
-
-                    width: 100%;
-                    padding: 0 0 5% 0;
-                }
-                &_text {
-                    padding: 0 0 1% 0;
-                    width: 50%;
-                }
-                &_input {
-                    font-size: 1em;
-                    font-weight: normal;
-
-                    border: 1px solid $Gray;
-                    border-radius: 2px;
-                    padding: 2px 0;
-                    width: 97%;
-
-                    &2 {
-                        font-size: 1em;
-                        font-weight: normal;
-
-                        border: 1px solid $Gray;
-                        border-radius: 2px;
-                        padding: 2px 0;
-                        width: 100%;
-                    }
-
-                    &3 {
-                        font-size: 1em;
-                        font-weight: normal;
-
-                        border: 1px solid $Gray;
-                        border-radius: 2px;
-                        padding: 2% 2% 2% 2%;
-
-                        width: 100%;
-                        height: 16vh;
-                        resize: none;
-                    }
-                    &4 {
-                        justify-self: center;
-                        align-self: center;
-
-                        font-size: 0.9em;
-                        line-height: 25px;
-                        font-weight: normal;
-
-                        padding: 1.8% 3% 1.8% 3%;
-                        border: none;
-                        border-radius: 2px;
-
-                        background: $blue2;
-                        color: white;
-                    }
-                }
-            }
-        }
-    }
-    
-    footer.container {
-        width: 70%;
-
-        .container__item1 {
-            &_text {
-                font-size: 0.7em;
-            }
-            &_logo {
-                margin-left: 12.5%;
-                width: 130px;
-                height: 32px;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width:450px) {
-    #nav_logo {
-        width: 150px;
-        height: 20px;
-    }
 }
