--- a/__variables.scss
+++ b/__variables.scss
@@ -22,8 +22,8 @@ body, html {
 }
 
 nav {
-    height: 8vh;
-    width: 70%;
+    height: 86.39px;
+    width: 1334px;
     display: flex;
     flex-direction: row;
     justify-content: center;
